@@ -1,3 +1,11 @@
+Hello!  The code here has evolved from ideas and excellent work by Matt
+Newman, Jean-Claude Wippler, TclKit etc.  To make this really successful,
+we need a group of volunteers to enhance what we have and build a new way
+of writing and distributing Tcl code.
+
+Introduction
+------------
+
 This is an implementation of a 'vfs' extension (and a 'vfs' package,
 including a small library of Tcl code).  The goal of this extension
 is to expose Tcl 8.4a3's new filesystem C API to the Tcl level.
@@ -27,6 +35,9 @@ the code completely cleaned up and documented as the package evolves.
 
 -- Vince Darley, August 1st 2001
 
+Current implementation
+----------------------
+
 Some of the provided vfs's require the Memchan extension for any operation 
 which involves opening files.
 
@@ -47,4 +58,37 @@ archives), it is often most simple to have 'local' be the same name as
 the archive itself.  The result of this is that Tcl will then see the
 archive as a directory, rather than a file.  Otherwise you might wish
 to create a dummy file/directory called 'local' before mounting.
+
+Limitations
+-----------
+
+We can't currently mount a file protocol.  For example it would be nice to 
+tell Tcl that we understand 'ftp://' as meaning an absolute path to be
+handled by our ftp-vfs system.  Then we could so something like
+
+    file copy ftp://ftp.foo.com/pub/readme.txt ~/readme.txt
+
+and our ftp-vfs system can deal with it.  This is really a limitation in
+Tcl's current understanding of file paths (and not any problem in this
+extension per se).
+
+Of course what we can do is mount any specific ftp address to somewhere in 
+the filesystem.  For example, we can mount 'ftp://ftp.foo.com/ to
+/ftp.foo.com/ and proceed from there.
+    
+Future thoughts
+---------------
+
+See:
+
+http://www.ximian.com/tech/gnome-vfs.php3
+http://www.lh.com/~oleg/ftp/HTTP-VFS.html
+
+for some ideas.  It would be good to accumulate ideas on the limitations of
+the current VFS support so we can plan out what vfs 2.0 will look like (and
+what changes will be needed in Tcl's core to support it).  Obvious things
+which come to mind are asynchronicity: 'file copy' from a mounted remote
+site (ftp or http) is going to be very slow and simply block the
+application.  Commands like that should have new asynchronous versions which
+can be used when desired (e.g. 'file copy from to -callback foo').
 
