@@ -1,3 +1,10 @@
+2001-08-22  Vince Darley <vincentdarley@sourceforge.net>
+	* added ability to treat entire urls as file paths, so
+	we can mount 'ftp://' as a root volume and examine its
+	contents.  This requires a patch to Tcl 8.4a4 which
+	is currently available from the Tcl project (see the
+	'fs update' patch/bug).
+	
 2001-08-13  Vince Darley <vincentdarley@sourceforge.net>
 	* ftp vfs works reasonably well now; try:
 	% package require vfs
